sprint_9-solution-http-api: добавил тесты для сабтасок